--- a/Encriptador/style.css
+++ b/Encriptador/style.css
@@ -3,5 +3,35 @@ body {
 }
 
 .logo {
-    margin: 2em 2em;
+    
 }
+
+.container {  
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.3fr 2.1fr 0.6fr;
+    gap:20px 20px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "logo logo result"
+      "text text result"
+      "buttons buttons result";
+  }
+    
+.logo { 
+    grid-area: logo; 
+    padding: 2em 2em;
+}
+  
+.text { 
+    grid-area: text; 
+}
+  
+.buttons { 
+    grid-area: buttons; 
+}
+
+.result { 
+    grid-area: result; 
+}
+  
