adición del cambio en los elementos desplegados al clickear botones con o sin texto

--- a/Encriptador/style.css
+++ b/Encriptador/style.css
@@ -116,6 +116,6 @@ body {
 
 .no-mensaje-img, .no-mensaje, .parrafo {
     position: relative;
-    top: 25%;
+    top: 20%;
+    visibility: visible;
 }
-  
