--- a/Encriptador/style.css
+++ b/Encriptador/style.css
@@ -20,7 +20,8 @@ body {
     
 .header { 
     grid-area: header; 
-    padding-left: 20px;
+    padding: 15px 0px 0px 30px;
+    opacity: 0.8;
 }
   
 .text-input { 
@@ -41,7 +42,7 @@ body {
     color: #ffffff81;
 }
 
-.input::placeholder {color: #f3f5fc}
+.input::placeholder {color: #ffffff81}
 
 .text-display { 
     grid-area: display; 
@@ -71,7 +72,7 @@ body {
 
 .copy {
     background: #343434;
-    color: #f3f5fc;
+    color: #f3f5fc90;
     border-radius: 10px;
     border: none;
     outline: none;
@@ -82,8 +83,8 @@ body {
 }
 
 .copy:hover {
-    background: #636fa4;
-    color: #f3f5fc;
+    background: #d8ad6c;
+    color: #343434;
 }
   
 .text-actions { 
@@ -121,13 +122,13 @@ body {
 }
 
 .button-cipher, .button-decipher:hover {
-    color: #f3f5fc;
+    color: #F2ECFF90;
     background: #343434;
     box-shadow:  -6px 10px 20px -8px rgba(0,0,0,0.6);
 }
 
 .button-decipher, .button-cipher:hover {
-    background: #FFC600;
+    background: #d8ad6c;
     color: #343434;
     box-shadow:  -6px 10px 20px -8px rgba(0,0,0,0.6);
 }
