--- a/style.css
+++ b/style.css
@@ -34,6 +34,17 @@ body {
     margin: 0px 40px 0px -30px;
     box-shadow:  0px 10px 30px -10px rgba(0,0,0,0.6);
 } 
+/*    
+.header { 
+    grid-area: header; 
+    background: #343434;
+    border-radius: 9px;
+    margin: 0px 40px 0px 20px;
+    box-shadow:  0px 10px 30px -10px rgba(0,0,0,0.6);
+    height: 53px;
+}
+
+.header img {padding: 13px 0px 0px 50px;}*/
  
 .text-input { 
     grid-area: input; 
